--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-\
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+
+<h1 class="title"> Shakura Woods
+</h1>
+<h2 class="subtitle">
+Information Technician 
+</h2>
+
+<hr>
+<div class="indent">
+  <h2 class="stack"> Contact: 
+</h2>
+  <p class="info">
+    521 H Avenue Harvey Milk BLDG <br> San Francisco, CA 94130 <br> (925) 291 - 4241 <br>
+    <a href="mailto:shakurawoods@gmail.com?Subject=Hello" target="_top">e-mail me</a>
+  </p>
+
+  <h2 class="stack"> Skills: 
+</h2>
+  <ul>
+    <li class="info">HTML5</li>
+    <li class="info">CSS3</li>
+    <li class="info">JAVA</li>
+  </ul>
+
+  <h2 class="stack"> Experience: </h2>
+  <ul>
+    <li class="info"> MDUSD IT Intern<em> - 2014 </em>
+    </li>
+
+    <li class="info"> Digital Safari Academy<em> - 2015 </em>
+    </li>
+    <li class="info"> Mission Techies<em> - 2016 </em>
+    </li>
+  </ul>
+
+  <h2 class="stack"> Education: </h2>
+  <ul>
+    <li class="info">Graduated Mt. Diablo High School<em> - 2015 </em>
+    </li>
+    <li class="info">Graduated Treasure Island Job Corps<em> - 2017 </em>
+    </li>
+  </ul>
