--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="shakurawoods.github.io/style.css">
-<h1 class="title"> Shakura Woods
+<h1 class="title"> Shakura Janelle Woods
 </h1>
 <h2 class="subtitle">
 Information Technician 
