--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" type="style/css" href="https://shakurawoods.github.io/style.css">
 <title> Shakura Woods Resume </title>
 <body>
   <div class="page">
