--- a/index.html
+++ b/index.html
@@ -2,87 +2,9 @@
 <html>
 <link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/style.css">
-<title> Shakura Woods Resume </title>
+<title> Shakura Woods </title>
 <body>
-  <div class="page">
-    <div class="indent">
-      <br>
-      <h1> Shakura Woods </h1>
-
-      <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-      />
-      <h2> Skills and Certifications: </h2>
-      <div style="width: 50%; float:left">
-        <p> <span class='bold'> Certifications </span> </p>
-        <ul>
-          <li> MOS Word </li>
-          <li> MOS Powerpoint </li>
-        </ul>
-      </div>
-
-      <div style="width: 50%; float:right">
-        <p> <span class='bold'> Hard Skills </span> </p>
-        <ul>
-          <li> Advanced in HTML5 & CSS3 </li>
-          <li> Interactive Design/Video Editing
-          </li>
-        </ul>
-      </div>
-      <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-      />
-
-      <h2> Technology Experience: </h2>
-      <p> <span class='bold'> MEDA Mission Techies </span> | San Francisco, CA <br> September – December 2016 <br>
-        <ul>
-          <li>Responsible for disassembling/reassembling desktops and laptops, troubleshooting, made repairs and ran diagnostics for Windows OS
-          </li>
-          <li>Participated in offsite team building activities as timekeeper, note taker, and leader
-          </li>
-        </ul>
-
-        <p> <span class='bold'> Digital Safari Academy </span> | Concord, CA <br> Graduated June 2015 <br>
-          <ul>
-            <li>Utilized Adobe Creative Suite (Photoshop, inDesign, DreamWeaver) for various projects
-            </li>
-            <li>Successfully learned basic website development & design fundamentals
-            </li>
-            <li>Created multiple computer games using Scratch, Construct 2, Stencyl
-            </li>
-            <li>Used both Apple & Windows operating systems on a daily basis
-            </li>
-          </ul>
-
-          <p> <span class='bold'> Mt. Diablo Unified School District IT Department </span> | Concord, CA <br> Summer 2014 <br>
-            <ul>
-              <li>Participated in launch of new district website, worked on logo and design template
-              </li>
-              <li>Edited numerous websites for schools over district using schoolloop program<br> debugging, updating for consistency, filling in content
-              </li>
-              <li>Worked alongside IT professionals and helped them complete daily tasks including:<br> wire stripping, hardware/lab maintenance, e-waste management, imaging / software installation and lab set-ups
-              </li>
-            </ul>
-            <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-            />
-
-            <h2> Volunteer: </h2>
-            <p> <span class='bold'> SF Food Bank </span> | Marin County </p>
-            <ul>
-              <li>Participated in effort that supplied 600k meals to communities in need
-              </li>
-              <li>Packaged fruit and checked for quality
-              </li>
-              <li>Boxed up food for families in need
-              </li>
-            </ul>
-            <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-            />
-
-            <h2> Education: </h2>
-            <p> <span class='bold'> Treasure Island Job Corps </span> | <span class='italic'> Office Administration </span> | San Francisco, CA 2016 - Present <br>
-              <p> <span class='bold'> Mt. Diablo High School </span> | <span class='italic'> Digital Safari Academy </span> | Concord, CA Graduated 2015 </p> <br>
-    </div>
-  </div>
+  
 </body>
 
 </html>
