--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <title> Shakura Woods </title>
 <body>
  <h1> Shakura Woods </h1>
-
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"
-      />  
+      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>  
 </body>
 
 </html>
