--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/style.css">
 <title> Shakura Woods </title>
 <body>
+  <div class="page">
+    <div class="indent">
  <h1> Shakura Woods </h1>
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
       <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>  
+    </div>
+  </div>
 </body>
 
 </html>
