--- a/index.html
+++ b/index.html
@@ -2,13 +2,51 @@
 <html>
 <link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/style.css">
-<title> Shakura Woods </title>
+<head>
+  
+ <style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    color: white;
+}
+</style>
+  </head>
+  <title> Shakura Woods </title>
+  
 <body>
   <div class="page">
     <div class="indent">
  <h1> Shakura Woods </h1>
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>  
+      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/> 
+       <h2> Employment: </h2>
+      
+<ul>
+  <li><a href="https://shakurawoods.github.io/resume.html">Resume</a></li>
+  <li><a href="https://shakurawoods.github.io/ref.html">References</a></li>
+  <li><a href="https://shakurawoods.github.io/cover.html">Cover Letter</a></li>
+</ul>
+       <h2> Projects: </h2>
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
     </div>
   </div>
 </body>
