--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ li a:hover {
   
 <body>
   <div class="page">
-    <div class="indent">
+    <div class="indent"><br>
  <h1> Shakura Woods </h1>
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
       <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/> 
