--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ li a {
 }
 
 li a:hover {
-  color:#6FA8DD;
+  color:#e0e0e0;
 }
 </style>
   </head>
@@ -35,9 +35,9 @@ li a:hover {
        <h2> Employment: </h2>
       
 <ul>
-  <a href="https://shakurawoods.github.io/resume.html">Resume</a>
-  <a href="https://shakurawoods.github.io/ref.html">References</a>
-  <a href="https://shakurawoods.github.io/cover.html">Cover Letter</a>
+  <li><a href="https://shakurawoods.github.io/resume.html">Resume</a></li>
+  <li><a href="https://shakurawoods.github.io/ref.html">References</a></li>
+  <li><a href="https://shakurawoods.github.io/cover.html">Cover Letter</a></li>
 </ul>
        <h2> Projects: </h2>
 
