--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@ li a:hover {
        <h2> Projects: </h2>
 
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="/">Innovation Project</a></li>
+  <li><a href="/">Snake</a></li>
+    <li><a href="/">Designs</a></li>
+
+
 </ul>
     </div>
   </div>
