--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,16 @@
 <html>
 <link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/style.css">
+  <head>
+    <style>
+     ul {
+  list-style-image: url('https://i.imgsafe.org/8ee0a9dadc.png');
+  font-family: 'Muli', sans-serif;
+  font-size:12.5px;
+  margin-left:-15px;
+  }
+    </style>
+  </head>
 <title> Shakura Woods Resume </title>
 <body>
   <div class="page">
@@ -10,8 +20,7 @@
       <h1> Shakura Woods </h1>
 
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-      />
+      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
       <h2> Skills and Certifications: </h2>
       <div style="width: 50%; float:left">
         <p> <span class='bold'> Certifications </span> </p>
@@ -29,8 +38,8 @@
           </li>
         </ul>
       </div>
-      <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-      />
+           <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+
 
       <h2> Technology Experience: </h2>
       <p> <span class='bold'> MEDA Mission Techies </span> | San Francisco, CA <br> September – December 2016 <br>
@@ -62,8 +71,8 @@
               <li>Worked alongside IT professionals and helped them complete daily tasks including:<br> wire stripping, hardware/lab maintenance, e-waste management, imaging / software installation and lab set-ups
               </li>
             </ul>
-            <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-            />
+                 <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+
 
             <h2> Volunteer: </h2>
             <p> <span class='bold'> SF Food Bank </span> | Marin County </p>
@@ -75,8 +84,8 @@
               <li>Boxed up food for families in need
               </li>
             </ul>
-            <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-            />
+                  <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+
 
             <h2> Education: </h2>
             <p> <span class='bold'> Treasure Island Job Corps </span> | <span class='italic'> Office Administration </span> | San Francisco, CA 2016 - Present <br>
