--- a/cover.html
+++ b/cover.html
@@ -11,8 +11,8 @@
 
 
       <p>351 H Ave. Building 442<br> Harvey Milk Memorial Admin Building<br> San Francisco, CA 94130</p>
-      <img class="hr" src="https://lh3.googleusercontent.com/ENFiiQ48OkhrCRB9bKqPwTJ2UKEtSMtWhcZQoKYbijwhLQSoG01-L3IjogJHJYqVbOhnh9ueWcKIk3ixwOalNPNbW492Vre6VxEbreh0awJu26X2ma9F0jhkbsGgd-TEAEe0x57hM5BPSRi7RevxkIsfCPFfVpAb-Vl2q4hbfdwIfSnnjkFq6LbzZSTI0yuMaI1Ku7CeB6lFG3G3OkA2OS7DQ_XE4sAu-pb7RxGYMFYqo0eJKlOpLEeDldrmcYj7frqEbmZ7bHFYwqKgu2DEjs6rapoLUPr7bsZlOePCVBhbhRMVHbD1UVPUQwRPWE2ZnFS4ZbY2YiwWvX0Hgh1ypz-JVEHxZI95_lHylpq4xU7INWdmIaedoFzgRToR9zjhjif-N7YzgQ6C00Zk6ud8GTXLSjGOycyyYqiVX4fhPOHRFtN2MBdo14dvbdh3YA3gPh82-b2oiX18BlK2Fmy01KkHqWliR0aboIx5xPmWEFmVoIJBlJ6PDkzk-YdSeyf25MtpmB320tQUgyK9vKL2-6-_TtJVMet2ptJ4GknWNfcLcN0TgK6MnrvU0Ipp-ZsyjqZTQoT3cgG4iDb9k4cV8fa8pYsQX96C88mj_nxnCUAUDQT7=w735-h13-no"
-      />
+         <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/> 
+
       <h2>RE: Office Assisstant</h2><br>
       <p> Dear Human Resources:<br><br> I am interested in applying for Office Assistant position which was advertised recently. My resume is enclosed for your consideration. I believe that I am best qualified for this position, because I have demonstrated
         my ability to be thorough and very dedicated to everything and anything I put my energy into. In addition, I am a highly motivated and reliable worker, which would qualify me for the position that is available in your department. Please feel free
@@ -22,6 +22,7 @@
         <br>
         <br> Shakura Woods<br></p>
     </div>
+     </div>
 </body>
 
 </html>
