--- a/apollo.html
+++ b/apollo.html
@@ -4,7 +4,7 @@
 <head>
 <title> Apollo </title>
 <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/apollo.css">
-<link rel="SHORTCUT ICON" type="image/x-icon" href="http://digitalsafari.org/swoods15/innovation/pix/trans_logo2.png">
+<link rel="SHORTCUT ICON" type="image/x-icon" href="/">
 <style>
 p.intro {
 font-family: 'Linx';
@@ -42,14 +42,14 @@ Our job was to define a pressing need in our society, whether it be political, s
 </p>
 </div>
 
-<img class="border" src="http://digitalsafari.org/swoods15/innovation/pix/caduceus.png">
-<img class="border2" src="http://digitalsafari.org/swoods15/innovation/pix/caduceus2.png">
+<img class="border" src="https://shakurawoods.github.io/caduceus.png">
+<img class="border2" src="https://shakurawoods.github.io//caduceus2.png">
 
 <a href="http://digitalsafari.org/swoods15/innovation/exec-summ.html">
-<img class="next" src="http://digitalsafari.org/swoods15/innovation/pix/arrow.png" width="95" height="84">
+<img class="next" src="https://shakurawoods.github.io/arrow.png" width="95" height="84">
 </a>
 <a href="http://digitalsafari.org/swoods15/innovation/funding.html">
-<img class="next2" src="http://digitalsafari.org/swoods15/innovation/pix/arrow2.png" width="95" height="84">
+<img class="next2" src="https://shakurawoods.github.io/arrow2.png" width="95" height="84">
 </a>
 </body>
 </html>
