--- a/apollo.html
+++ b/apollo.html
@@ -45,10 +45,10 @@ Our job was to define a pressing need in our society, whether it be political, s
 <img class="border" src="https://shakurawoods.github.io/caduceus.png">
 <img class="border2" src="https://shakurawoods.github.io//caduceus2.png">
 
-<a href="http://digitalsafari.org/swoods15/innovation/exec-summ.html">
+<a href="https://shakurawoods.github.io/summary.html">
 <img class="next" src="https://shakurawoods.github.io/arrow.png" width="95" height="84">
 </a>
-<a href="http://digitalsafari.org/swoods15/innovation/funding.html">
+<a href="https://shakurawoods.github.io/funding.html">
 <img class="next2" src="https://shakurawoods.github.io/arrow2.png" width="95" height="84">
 </a>
 </body>
