--- a/summary.html
+++ b/summary.html
@@ -133,7 +133,7 @@ Our first priority after we break even is to return your investment with an addi
 
 
 
-<a href="https://shakurawoods.github.io/.html">
+<a href="https://shakurawoods.github.io/data.html">
 
 
 <img class="next" src="https://shakurawoods.github.io/arrow.png" width="95" height="84">
