--- a/analysis.html
+++ b/analysis.html
@@ -14,7 +14,7 @@
 <title> Apollo - Market Analysis </title>
 
 
-<link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io//apollo.css">
+<link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/apollo.css">
 
 
 <link rel="SHORTCUT ICON" type="image/x-icon" href="">
