--- a/ref.html
+++ b/ref.html
@@ -12,7 +12,7 @@
 
 
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-               <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/> 
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
       <h2> References: </h2>
       <p> <span class="bold"> Em Walsh </span> <br> <span class="oblique">Office Administration Instructor </span> <br> 351 Avenue H | San Francisco, CA 94130 <br> 415-277-2332 | walsh.emily@jobcorps.org <br><br>
