--- a/cover.html
+++ b/cover.html
@@ -11,7 +11,7 @@
 
 
       <p>351 H Ave. Building 442<br> Harvey Milk Memorial Admin Building<br> San Francisco, CA 94130</p>
-         <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/> 
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
       <h2>RE: Office Assisstant</h2><br>
       <p> Dear Human Resources:<br><br> I am interested in applying for Office Assistant position which was advertised recently. My resume is enclosed for your consideration. I believe that I am best qualified for this position, because I have demonstrated
