--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <head>
     <style>
      ul {
-  list-style-image: url('https://i.imgsafe.org/8ee0a9dadc.png');
+  list-style-image: url('https://shakurawoods.github.io/star.png');
   font-family: 'Muli', sans-serif;
   font-size:12.5px;
   margin-left:-15px;
@@ -20,7 +20,7 @@
       <h1> Shakura Woods </h1>
 
       <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
       <h2> Skills and Certifications: </h2>
       <div style="width: 50%; float:left">
         <p> <span class='bold'> Certifications </span> </p>
@@ -38,7 +38,7 @@
           </li>
         </ul>
       </div>
-           <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
 
       <h2> Technology Experience: </h2>
@@ -71,7 +71,7 @@
               <li>Worked alongside IT professionals and helped them complete daily tasks including:<br> wire stripping, hardware/lab maintenance, e-waste management, imaging / software installation and lab set-ups
               </li>
             </ul>
-                 <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
 
             <h2> Volunteer: </h2>
@@ -84,7 +84,7 @@
               <li>Boxed up food for families in need
               </li>
             </ul>
-                  <img class="hr" src="https://i.imgsafe.org/8ee08dc44c.png"/>
+      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
 
             <h2> Education: </h2>
