--- a/resume.html
+++ b/resume.html
@@ -42,47 +42,41 @@
 
 
       <h2> Technology Experience: </h2>
-      <p> <span class='bold'> MEDA Mission Techies </span> | San Francisco, CA <br> September – December 2016 <br>
+      <p> <span class='bold'> MEDA Mission Techies </span> | San Francisco, CA <br> October 2016 - Present <br>
         <ul>
-          <li>Responsible for disassembling/reassembling desktops and laptops, troubleshooting, made repairs and ran diagnostics for Windows OS
-          </li>
-          <li>Participated in offsite team building activities as timekeeper, note taker, and leader
-          </li>
+          <li>Refurbished and recorded condition of 60 windows laptops for Mission Bit project</li>
+          <li>Participated in offsite team building activities as timekeeper, note taker, and leader</li>
+          <li>Developed recreational Android applications using MIT App Inventor</li>
+          <li>Used Javascript and Bootstrap to create mobile-friendly web applications</li>
         </ul>
 
         <p> <span class='bold'> Digital Safari Academy </span> | Concord, CA <br> Graduated June 2015 <br>
           <ul>
-            <li>Utilized Adobe Creative Suite (Photoshop, inDesign, DreamWeaver) for various projects
-            </li>
-            <li>Successfully learned basic website development & design fundamentals
-            </li>
-            <li>Created multiple computer games using Scratch, Construct 2, Stencyl
-            </li>
-            <li>Used both Apple & Windows operating systems on a daily basis
-            </li>
+            <li>Utilized Adobe Creative Suite (Photoshop, inDesign, DreamWeaver) to create graphics, websites, flyers and other alternative digital media for various projects</li>
+            <li>Developed websites for business owners using Wordpress</li>
+            <li>Created multiple platform computer games using Scratch, Construct 2, Stencyl</li>
+            <li>Used both Apple and Windows operating systems on a daily basis</li>
+            <li>Extensively used Google Apps and practiced effective online communication</li>
           </ul>
 
           <p> <span class='bold'> Mt. Diablo Unified School District IT Department </span> | Concord, CA <br> Summer 2014 <br>
             <ul>
-              <li>Participated in launch of new district website, worked on logo and design template
-              </li>
-              <li>Edited numerous websites for schools over district using schoolloop program<br> debugging, updating for consistency, filling in content
-              </li>
-              <li>Worked alongside IT professionals and helped them complete daily tasks including:<br> wire stripping, hardware/lab maintenance, e-waste management, imaging / software installation and lab set-ups
-              </li>
+              <li>Participated in launch of new district website, worked on logo and design template</li>
+              <li>Edited numerous pages for schools over district using schoolloop program<br> debugging, updating for consistency, filling in content  </li>
+              <li>Worked alongside IT professionals and helped them complete daily tasks including:
+wire stripping, hardware/lab maintenance, e-waste management, imaging/software installation and lab set-ups</li>
             </ul>
       <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
 
             <h2> Volunteer: </h2>
-            <p> <span class='bold'> SF Food Bank </span> | Marin County </p>
+            <p> <span class='bold'> Jack in the Box </span> | Team Member | Walnut Creek, CA <br> October 2015 - March 2016 <br> </p>
             <ul>
-              <li>Participated in effort that supplied 600k meals to communities in need
-              </li>
-              <li>Packaged fruit and checked for quality
-              </li>
-              <li>Boxed up food for families in need
-              </li>
+              <li>Worked very flexible shifts alongside a diverse team</li>
+              <li>Learned the importance of punctuality and productivity</li>
+              <li>Functioned under a stressful and fast-paced environment</li>
+              <li>Operated both in food service and as a cashier</li>
+
             </ul>
       <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
