--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@ wire stripping, hardware/lab maintenance, e-waste management, imaging/software i
       <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
 
 
-            <h2> Volunteer: </h2>
+            <h2> Work Experience: </h2>
             <p> <span class='bold'> Jack in the Box </span> | Team Member | Walnut Creek, CA <br> October 2015 - March 2016 <br> </p>
             <ul>
               <li>Worked very flexible shifts alongside a diverse team</li>
