--- a/index.html
+++ b/index.html
@@ -1,54 +1,19 @@
-<!DOCTYPE html>
-<html>
-<link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://shakurawoods.github.io/style.css">
+<!DOCTYPE HTML>
+<html lang="en">
+
 <head>
-  
- <style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-}
+  <title>Books & Authors</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="books.css">
+  <script type="text/javascript" src="index.js"></script>
 
-li a {
-    display: block;
-      padding: 2px 4px;
-    color: #000;
-    text-decoration: none;
-}
+</head>
+<title> Shakura Woods </title>
 
-li a:hover {
-  color:#e0e0e0;
-}
-</style>
-  </head>
-  <title> Shakura Woods </title>
-  
 <body>
-  <div class="page">
-    <div class="indent"><br>
- <h1> Shakura Woods </h1>
-      <p>San Francisco, CA 94130<br> 925) 291-4241 ▪ shakurawoods@gmail.com</p>
-      <img class="hr" src="https://shakurawoods.github.io/bar.png"/> 
-       <h2> Employment: </h2>
-      
-<ul>
-  <li><a href="https://shakurawoods.github.io/resume.html">Resume</a></li>
-  <li><a href="https://shakurawoods.github.io/ref.html">References</a></li>
-  <li><a href="https://shakurawoods.github.io/cover.html">Cover Letter</a></li>
-</ul>
-       <h2> Projects: </h2>
-
-<ul>
-  <li><a href="/">Innovation Project</a></li>
-  <li><a href="/">Snake</a></li>
-    <li><a href="/">Designs</a></li>
-
-
-</ul>
-    </div>
+  <h1> Books, Authors, Reviews </h1>
+  <div class="books">
   </div>
 </body>
 
