--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1> Shakura Janelle Woods, The First </h1>    
+<h1> Shakura Janelle </h1>
+<ul>
+<li>About</li>
+<li>Profile</li>
+<li>Resume</li>
+<li>References</li>
+<li>Contact</li>
+</ul>
 </body>
 </html>
