--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1> Shakura Janelle </h1>
-<ul>
-<li>About</li>
-<li>Profile</li>
-<li>Resume</li>
-<li>References</li>
-<li>Contact</li>
-</ul>
+<a href="/index.html"><h1> Shakura Janelle </h1></a>
+
 </body>
 </html>
