--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>Shakura Woods</title>
-<link rel="shortcut icon" href="/icon.png" type="image/x-icon" />
+<link rel="shortcut icon" href="https://shakurawoods.github.io/icon.png" type="image/x-icon" />
 <link rel="stylesheet" href="style.css" type="text/css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
