--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="eng">
 <head>
 <title>Shakura Woods</title>
-<link rel="shortcut icon" href="https://shakurawoods.github.io/icon.png" type="image/x-icon" />
+<link rel="icon" type="image/png" href="https://shakurawoods.github.io/icon.png"/>
 <link rel="stylesheet" href="style.css" type="text/css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <a href="/index.html"><h1> Shakura Janelle </h1></a>
-
 </body>
 </html>
